Fixed main page forms color in dark mode

--- a/public/styles/dark_mode.css
+++ b/public/styles/dark_mode.css
@@ -366,4 +366,9 @@ nav a:hover {
 
 .about-font {
     color:var(--main-color4);
+
+}
+
+.modal-content {
+    background-color: var(--main-color2);
 }
